--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Boolando</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="left-menu">
+                <ul>
+                    <li>Donna</li>
+                    <li>Uomo</li>
+                    <li>Bambini</li>
+                </ul>
+            </div>
+            <div class="center-menu">
+                <img src="img/boolean-logo.png" alt="logo">
+            </div>
+
+            <div class="right-menu">
+                <i class="fa-regular fa-user"></i>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-bag-shopping"></i>
+            </div>
+
+        </nav>
+    </header>
 </body>
 </html>
