add first row main add hover and flex

--- a/index.html
+++ b/index.html
@@ -31,5 +31,50 @@
 
         </nav>
     </header>
+
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="card">
+                        <img src="img/1.webp" alt="foto1">
+                        <img class="hover-img" src="img/1b.webp" alt="">
+                        <p class="brand">Levi's</p>
+                        <h3 class="item">RELAXED FIT TEE UNISEX</h2>
+                        <span class="price">14.99€</span>
+                        <span class="not-price">29.99€</span>                    
+                        <div class="hearth">
+                            &hearts;
+                        </div>
+                </div>
+
+                <div class="card">
+                    <img src="img/2.webp" alt="foto2">
+                    <img class="hover-img" src="img/2b.webp" alt="">
+                    <p class="brand">Levi's</p>
+                    <h3 class="item">RELAXED FIT TEE UNISEX</h2>
+                    <span class="price">14.99€</span>
+                    <span class="not-price">29.99€</span>                    
+                    <div class="hearth">
+                        &hearts;
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="img/3.webp" alt="foto3">
+                    <img class="hover-img" src="img/3b.webp" alt="">
+                    <p class="brand">Levi's</p>
+                    <h3 class="item">RELAXED FIT TEE UNISEX</h2>
+                    <span class="price">14.99€</span>
+                    <span class="not-price">29.99€</span>                    
+                    <div class="hearth">
+                        &hearts;
+                    </div>
+                </div>
+
+            </div>
+            <div class="card"></div>
+            <div class="card"></div>
+        </div>
+    </main>
 </body>
 </html>
