--- a/index.html
+++ b/index.html
@@ -115,5 +115,34 @@
             
         </div>
     </main>
+
+    <footer>
+        <div class="container flex">
+            <div class="footer-left">
+                <h3>Booleando s.r.l</h3>
+                <section>
+                    <ul>
+                        <li>Informazioni legali</li>
+                        <li>inormativa sulla privacy</li>
+                        <li>Diritto di recesso</li>
+                    </ul>
+                </section>
+            </div>
+
+            <div class="footer-right">
+                <h4>Trovaci anche su</h4>
+                <section>
+                    <ul>
+                        <li><i class="fa-brands fa-square-facebook"></i></li>
+                        <li><i class="fa-brands fa-square-twitter"></i></li>
+                        <li><i class="fa-brands fa-square-instagram"></i></li>
+                        <li><i class="fa-brands fa-square-youtube"></i></li>
+                        <li></li>
+                    </ul>
+                </section>
+            </div>
+
+        </div>
+    </footer>
 </body>
 </html>
