finish exercise fix bug width, add label

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
                         <div class="hearth">
                             &hearts;
                         </div>
+                        <div class="label">
+                            -50%
+                        </div>
+                        <div class="label-2">
+                            Sostenibilità
+                        </div>
                 </div>
 
                 <div class="card">
@@ -59,6 +65,9 @@
                     <div class="hearth">
                         &hearts;
                     </div>
+                    <div class="label">
+                        -30%
+                    </div>
                 </div>
 
                 <div class="card">
@@ -70,6 +79,9 @@
                     <span class="not-price">29.99€</span>                    
                     <div class="hearth">
                         &hearts;
+                    </div>
+                    <div class="label">
+                        -30%
                     </div>
                 </div>
             </div>
@@ -85,6 +97,12 @@
                         <span class="not-price">29.99€</span>                    
                         <div class="hearth">
                             &hearts;
+                        </div>
+                        <div class="label">
+                            -50%
+                        </div>
+                        <div class="label-2">
+                            Sostenibilità
                         </div>
                 </div>
 
@@ -103,12 +121,15 @@
                 <div class="card">
                     <img src="img/6.webp" alt="foto6">
                     <img class="hover-img" src="img/6b.webp" alt="">
-                    <p class="brand">Levi's</p>
-                    <h3 class="item">RELAXED FIT TEE UNISEX</h2>
+                    <p class="brand">Esprit</p>
+                    <h3 class="item">MAGLIONE-BLACK</h2>
                     <span class="price">29.99€</span>
                                      
                     <div class="hearth">
                         &hearts;
+                    </div>
+                    <div class="label-2 fix">
+                        Sostenibilità
                     </div>
                 </div>
             </div>
