--- a/index.html
+++ b/index.html
@@ -40,10 +40,13 @@
                 <div class="card">
                         <img src="img/1.webp" alt="foto1">
                         <img class="hover-img" src="img/1b.webp" alt="">
-                        <p class="brand">Levi's</p>
-                        <h3 class="item">RELAXED FIT TEE UNISEX</h2>
-                        <span class="price">14.99€</span>
-                        <span class="not-price">29.99€</span>                    
+                        <div class="text">
+                            <div class="brand">Levi's</div>
+                            <h3 class="item">RELAXED FIT TEE UNISEX</h2>
+                            <span class="price">14.99€</span>
+                            <span class="not-price">29.99€</span>                    
+
+                        </div>
                         <div class="hearth">
                             &hearts;
                         </div>
@@ -58,7 +61,7 @@
                 <div class="card">
                     <img src="img/2.webp" alt="foto2">
                     <img class="hover-img" src="img/2b.webp" alt="">
-                    <p class="brand">Guess</p>
+                    <div class="brand">Guess</div>
                     <h3 class="item">ROSES TEE</h2>
                     <span class="price">20.99€</span>
                     <span class="not-price">29.99€</span>                    
@@ -73,7 +76,7 @@
                 <div class="card">
                     <img src="img/3.webp" alt="foto3">
                     <img class="hover-img" src="img/3b.webp" alt="">
-                    <p class="brand">Come Zucchero Filato</p>
+                    <div class="brand">Come Zucchero Filato</div>
                     <h3 class="item">VOGLIA DI COLORI PASTELLO</h2>
                     <span class="price">14.99€</span>
                     <span class="not-price">29.99€</span>                    
@@ -92,7 +95,7 @@
                 <div class="card">
                         <img src="img/4.webp" alt="foto4">
                         <img class="hover-img" src="img/4b.webp" alt="">
-                        <p class="brand">Levi's</p>
+                        <div class="brand">Levi's</div>
                         <h3 class="item">TEE UNISEX</h2>
                         <span class="price">14.99€</span>
                         <span class="not-price">29.99€</span>                    
@@ -110,7 +113,7 @@
                 <div class="card">
                     <img src="img/5.webp" alt="foto5">
                     <img class="hover-img" src="img/5b.webp" alt="">
-                    <p class="brand">Maya Deluxe</p>
+                    <div class="brand">Maya Deluxe</div>
                     <h3 class="item">STRIPE BODICE</h2>
                     <span class="price">99.99€</span>
                                       
@@ -122,7 +125,7 @@
                 <div class="card">
                     <img src="img/6.webp" alt="foto6">
                     <img class="hover-img" src="img/6b.webp" alt="">
-                    <p class="brand">Esprit</p>
+                    <div class="brand">Esprit</div>
                     <h3 class="item">MAGLIONE-BLACK</h2>
                     <span class="price">29.99€</span>
                                      
